--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <header>
+      <h1>Hogwarts School</h1>
+    </header>
     <%= yield %>
+    <footer>
+      <h6>Copywrong 2018</h6>
+    </footer>
   </body>
 </html>
