--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Students#index</h1>
-<p>Find me in app/views/students/index.html.erb</p>
+<h2> All Students </h2>
+
+<ul>
+  <% @students.each do |student| %>
+      <li><%= student.name%> of house <%= student.house.name%></li>
+  <% end %>
+</ul>
